<resources>
    <string name="app_name">EsisRepo</string>
    <string name="submitButton">Submit</string>
    <string name="cancelButton">Cancel</string>
    <string name="usernameField">Enter your username</string>
    <string name="pwdField">Enter your password</string>
    <string name="homeTitle">Home</string>
    <string name="loginTitle">Login</string>
    <string name="profileTitle">User Profile</string>
    <string name="addDocTitle">Add New Document</string>
    <string name="workListTitle">Work list</string>
    <string name="descriptionField">Description</string>
    <string name="promotionField">Promotion</string>
    <string name="categoryField">Category</string>
    <string name="workDate">Work date</string>
    <string name="addImage">Add image</string>
    <string name="addWork">Add work</string>
    <string name="addWorkButton">Add work</string>
    <string name="addImageButton">Add image</string>
    <string name="workImage">Work image</string>
    <string name="settingsItemMenu">Settings</string>
    <string name="modifyItemMenu">Modify</string>
    <string name="imageDescription">Image profile</string>
    <string name="userName">"Nom : "</string>
    <string name="userMatricule">"Matricule :""</string>
    <string name="workDetailTitle">Work Detail</string>
    <string name="workDetailButton">Work Detail</string>
    <string name="workDescription">"Description : "</string>
    <string name="workCreationDate">"Date création : "</string>
    <string name="item">Share</string>
    <string name="shareItem">Share</string>
    <string name="deleteItem">Delete</string>
    <string name="author">"Author : "</string>
    <string name="promotion">"Promotion : "</string>
    <string name="category">"Category : "</string>
    <string name="searchItem">Search</string>
    <string name="filterItem">FIlter</string>
    <string name="allWorkList">All</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="modifyButton">Modify</string>
    <string name="confirmNewPWD">Confirm new password</string>
    <string name="newPWD">New password</string>
    <string name="oldPWD">Old password</string>
    <string name="goBackButton">Go Back</string>
    <string name="idField">Enter the id</string>
    <string name="idList">Liste des étudiant</string>
</resources>