<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageActivity"
    android:orientation="vertical">

    <androidx.fragment.app.FragmentContainerView
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_container_view"
        android:name="org.esisalama.esisrepo.ItemFragment"
        tools:layout="@layout/fragment_item_list" />

    <Button
        android:id="@+id/addWork"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end|bottom"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="75dp"
        android:background="@drawable/add_work_button"
        android:contentDescription="@string/addWorkButton"
        android:icon="@drawable/ic_baseline_add_24" />

    <LinearLayout
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:backgroundTint="@color/purple_500">

        <Button
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:hint="@string/allWorkList"
            android:textColorHint="#757575"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/profileButton"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:hint="@string/profileTitle"
            android:textColorHint="#757575"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</FrameLayout>